src/style/index.less
@import './var/light.less';
@import './var/purple.less';
@import './var/dark.less';

@tailwind components;
@tailwind utilities;


html, body {
  background-color: var(--ls-primary-background-color);
  margin: 0;
  @apply w-screen h-screen overflow-hidden;
  &.modal-app {
    background-color: transparent;
  }
}
#root {
  @apply w-screen h-screen;
}

.page-container {
  width: calc(100vw - 90px);
  @apply h-screen;
}

/** 单行溢出隐藏 */
.ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.sidebar .ant-collapse > .ant-collapse-item > .ant-collapse-header {
  padding: 4px 10px;
}
.sidebar .ant-collapse-ghost > .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box {
  padding: 2px 10px;
}

.singlge-line-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

// .dark {
//   filter: invert(1) hue-rotate(180deg);
// }
// .dark .mask {
//   filter: invert(1) hue-rotate(180deg);
// }

.bg-primary {
  background-color: var(--ls-primary-background-color);
}
.bg-quaternary {
  background-color: var(--ls-quaternary-background-color);
}
.title-text {
  color: var(--ls-title-text-color);
}
.text {
  color: var(--ls-text-color);
}
.description-text {
  color: var(--ls-description-text-color);
}
.tint-text {
  color: var(--ls-tint-text-color);
}

.tui-full-calendar-popup-container {
  background-color: var(--ls-quaternary-background-color);
  border-color: var(--ls-description-text-color);
}
.tui-full-calendar-arrow-left .tui-full-calendar-popup-arrow-fill {
  border-right-color: var(--ls-quaternary-background-color);
}
.tui-full-calendar-popup-detail .tui-full-calendar-section-button {
  border-top-color: var(--ls-description-text-color);
}
.tui-full-calendar-popup-vertical-line {
  background-color: var(--ls-description-text-color);
}

.calendar-popup-detail-content {
  max-height: 200px;
  overflow-y: auto;
}

.check-box {
  position: relative;
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 4px;
  /* border: 2px solid #409eff; */
  box-sizing: border-box;
  vertical-align: middle;
}
/* checked border */
.check-box.checked::before {
  content: "";
  box-sizing: border-box;
  display: inline-block;
  width: 8px;
  height: 11px;
  border: 4px solid rgba(4, 85, 62, 0.5);
  border-top: 0;
  border-left: 0;
  position: absolute;
  left: 4px;
  top: 7px;
  transform: translateY(-50%) rotate(45deg);
}
.check-box.checked::after {
  content: "";
  box-sizing: border-box;
  display: inline-block;
  width: 6px;
  height: 9px;
  border: 2px solid #ddd;
  border-top: 0;
  border-left: 0;
  position: absolute;
  left: 5px;
  top: 7px;
  transform: translateY(-50%) rotate(45deg);
}

.hide {
  display: none;
}

